// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
{
  "Parameters": {
    "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5ArtifactHash1C21AB38": {
      "Description": "Artifact hash for asset "1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5"",
      "Type": "String",
    },
    "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3Bucket6AC66C20": {
      "Description": "S3 bucket for asset "1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5"",
      "Type": "String",
    },
    "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3VersionKey3A3E0DE8": {
      "Description": "S3 key for asset version "1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5"",
      "Type": "String",
    },
    "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447ArtifactHashCB23AD0A": {
      "Description": "Artifact hash for asset "e8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447"",
      "Type": "String",
    },
    "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3BucketF1720576": {
      "Description": "S3 bucket for asset "e8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447"",
      "Type": "String",
    },
    "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3VersionKey6588C8E4": {
      "Description": "S3 key for asset version "e8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447"",
      "Type": "String",
    },
  },
  "Resources": {
    "TestConfigDFE7B72C": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3BucketF1720576",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3VersionKey6588C8E4",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3VersionKey6588C8E4",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
          "python3.9",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3Bucket6AC66C20",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3VersionKey3A3E0DE8",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3VersionKey3A3E0DE8",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5ArtifactHash1C21AB38": {
      "Description": "Artifact hash for asset "1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5"",
      "Type": "String",
    },
    "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3Bucket6AC66C20": {
      "Description": "S3 bucket for asset "1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5"",
      "Type": "String",
    },
    "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3VersionKey3A3E0DE8": {
      "Description": "S3 key for asset version "1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5"",
      "Type": "String",
    },
    "AssetParameters7cc1a9613ea169e0e583ba24b5245f6036d067101c06aec359c3786610803605ArtifactHash22082629": {
      "Description": "Artifact hash for asset "7cc1a9613ea169e0e583ba24b5245f6036d067101c06aec359c3786610803605"",
      "Type": "String",
    },
    "AssetParameters7cc1a9613ea169e0e583ba24b5245f6036d067101c06aec359c3786610803605S3BucketC2591D75": {
      "Description": "S3 bucket for asset "7cc1a9613ea169e0e583ba24b5245f6036d067101c06aec359c3786610803605"",
      "Type": "String",
    },
    "AssetParameters7cc1a9613ea169e0e583ba24b5245f6036d067101c06aec359c3786610803605S3VersionKeyF93DC4B1": {
      "Description": "S3 key for asset version "7cc1a9613ea169e0e583ba24b5245f6036d067101c06aec359c3786610803605"",
      "Type": "String",
    },
    "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447ArtifactHashCB23AD0A": {
      "Description": "Artifact hash for asset "e8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447"",
      "Type": "String",
    },
    "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3BucketF1720576": {
      "Description": "S3 bucket for asset "e8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447"",
      "Type": "String",
    },
    "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3VersionKey6588C8E4": {
      "Description": "S3 key for asset version "e8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3BucketF1720576",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3VersionKey6588C8E4",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3VersionKey6588C8E4",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
          "python3.9",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3Bucket6AC66C20",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3VersionKey3A3E0DE8",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3VersionKey3A3E0DE8",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParameters7cc1a9613ea169e0e583ba24b5245f6036d067101c06aec359c3786610803605S3BucketC2591D75",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters7cc1a9613ea169e0e583ba24b5245f6036d067101c06aec359c3786610803605S3VersionKeyF93DC4B1",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters7cc1a9613ea169e0e583ba24b5245f6036d067101c06aec359c3786610803605S3VersionKeyF93DC4B1",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "customUserAgent": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5ArtifactHash1C21AB38": {
      "Description": "Artifact hash for asset "1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5"",
      "Type": "String",
    },
    "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3Bucket6AC66C20": {
      "Description": "S3 bucket for asset "1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5"",
      "Type": "String",
    },
    "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3VersionKey3A3E0DE8": {
      "Description": "S3 key for asset version "1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5"",
      "Type": "String",
    },
    "AssetParametersdf2e92c3ab0fa435e53e2cd575d990bf91ef6866e59d19b817486bc490c5b162ArtifactHashE17CC473": {
      "Description": "Artifact hash for asset "df2e92c3ab0fa435e53e2cd575d990bf91ef6866e59d19b817486bc490c5b162"",
      "Type": "String",
    },
    "AssetParametersdf2e92c3ab0fa435e53e2cd575d990bf91ef6866e59d19b817486bc490c5b162S3BucketECBB312B": {
      "Description": "S3 bucket for asset "df2e92c3ab0fa435e53e2cd575d990bf91ef6866e59d19b817486bc490c5b162"",
      "Type": "String",
    },
    "AssetParametersdf2e92c3ab0fa435e53e2cd575d990bf91ef6866e59d19b817486bc490c5b162S3VersionKeyF1758139": {
      "Description": "S3 key for asset version "df2e92c3ab0fa435e53e2cd575d990bf91ef6866e59d19b817486bc490c5b162"",
      "Type": "String",
    },
    "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447ArtifactHashCB23AD0A": {
      "Description": "Artifact hash for asset "e8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447"",
      "Type": "String",
    },
    "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3BucketF1720576": {
      "Description": "S3 bucket for asset "e8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447"",
      "Type": "String",
    },
    "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3VersionKey6588C8E4": {
      "Description": "S3 key for asset version "e8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3BucketF1720576",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3VersionKey6588C8E4",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse8a9e51cc39876acd3beddc336ee76b25f2fa961d51f8ec968e9ef6c52090447S3VersionKey6588C8E4",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
          "python3.9",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3Bucket6AC66C20",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3VersionKey3A3E0DE8",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1c2946743e30514d39c3782eba10cb3864738aa09f270eb9654754977c101bf5S3VersionKey3A3E0DE8",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParametersdf2e92c3ab0fa435e53e2cd575d990bf91ef6866e59d19b817486bc490c5b162S3BucketECBB312B",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersdf2e92c3ab0fa435e53e2cd575d990bf91ef6866e59d19b817486bc490c5b162S3VersionKeyF1758139",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersdf2e92c3ab0fa435e53e2cd575d990bf91ef6866e59d19b817486bc490c5b162S3VersionKeyF1758139",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "user_agent_extra": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
